implemented herz button click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,12 @@
     </string-array>
     <string-array name="data3">
         <item>Bewertung Tagesziel</item>
-        <item>Notfallkontakt</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
     </string-array>
     <string-array name="data4">
         <item>Monatsübersicht</item>
