--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,13 +19,9 @@
         <item>Notfallkontakt</item>
     </string-array>
     <string-array name="data3">
-        <item>Bewertung Tagesziel</item>
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
+        <item>Monatsübersicht</item>
+        <item>Jahresübersicht</item>
+
     </string-array>
     <string-array name="data4">
         <item>Monatsübersicht</item>
