--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,11 @@
     </string-array>
     <string-array name="data4">
         <item>Durchschnittlicher Gemütszustand</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
+        <item>sehr gut</item>
+        <item>gut</item>
+        <item>nicht gut</item>
+        <item>schlecht</item>
+        <item>sehr schlecht</item>
     </string-array>
     <string-array name="data5">
         <item>Durchschnittlicher Gemütszustand</item>
